--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "use": "@vercel/static-build",
       "config": { "distDir": "build" }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
