--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-       "lint": "eslint .",
+    "lint": "eslint .",
     "preview": "vite preview",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "react-scripts": "^5.0.1",
     "vite": "^5.4.1"
   }
 }
